--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100dvh;
 }
 
 .login-form {
@@ -15,6 +15,20 @@
   display: flex;
   flex-direction: column;
   width: 350px;
+}
+
+.login-title h1{
+  text-align: center;
+  margin:0,0,20px,0;
+}
+
+.login-icons {
+  display: flex;
+  justify-content: center;
+  align-Items: center;
+  gap: 30px;
+  margin-top: 30px;
+  width: 100%;
 }
 
 .login-form h1 {
@@ -71,4 +85,25 @@
   background-color: #5a6fd6;
   box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
   transform: translateY(-2px);
+}
+
+.login-icons svg{
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+}
+
+.login-icons svg:hover{
+  transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+  .login-form {
+    width: 90%; 
+    max-width: 350px;
+    padding: 20px;
+  }
+
+  .login-title {
+    font-size: 1.5rem; 
+  }
 }
