--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 .nav-logo{
@@ -38,4 +39,43 @@
 color: white;
 text-decoration: none;
 font-weight: bold;
+}
+
+.navbar-toggle {
+    display: none; 
+    font-size: 24px;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-menu {
+        display: none; 
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background-color: #222;
+        text-align: center;
+        padding: 20px 0;
+        z-index: 10;
+    }
+
+    .navbar-menu.active {
+        display: block;
+    }
+
+    .navbar-menu ul {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .navbar-menu a {
+        display: block;
+        width: 100%;
+    }
 }
