--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,5 +1,5 @@
 .login-container {
-    background: linear-gradient(135deg, #667EEA 30%, #764BA2 70%);
+    background: linear-gradient(90deg, #8ef693 0%, #26A69A 100%);
     width: 100%;
   display: flex;
   justify-content: center;
